[gd_scene load_steps=4 format=3 uid="uid://crx47vyion8sm"]

[ext_resource type="Theme" uid="uid://c7qjkrab2qnam" path="res://scenes/ui/main_menu/main_menu_theme.tres" id="1_4nr4u"]
[ext_resource type="Script" uid="uid://dhdgj4dcldg86" path="res://scenes/ui/main_menu/load_game_sub_menu.gd" id="2_75ica"]
[ext_resource type="StyleBox" uid="uid://cyrgt5fvo3qxp" path="res://scenes/ui/trinket_menu/trinket_menu_panelcontainer.tres" id="3_pcvo8"]

[node name="LoadGameSubMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4nr4u")
script = ExtResource("2_75ica")
required_mode = 1
metadata/_custom_type_script = "uid://dl472b4rhvohb"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_pcvo8")

[node name="Warning" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue from saved game?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Yes" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"MainMenuButton"
text = "YES"

[node name="No" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"MainMenuButton"
text = "NO"

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/HBoxContainer/Yes" to="." method="_on_hover"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/HBoxContainer/No" to="." method="_on_hover"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/No" to="." method="_on_no_pressed"]
